[package]
name = "debnix"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Translate debian library names to their corresponding names in nixpkgs."

[workspace]
members = [
    ".",
    "crates/*",
    "lib/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
clap_complete = "4.4.1"
csv = "1.2.2"
log = "0.4"
regex = "1.10.2"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.190", features = ["serde_derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
control-file = { path = "./lib/control-file/", version = "0.1.0" }
lazy_static = "1.4.0"
chrono = "0.4.31"
env_logger = "0.10.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
[profile.dev]
incremental = true
lto = "thin"
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = false
strip = true
