[package]
name = "debnix"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Translate debian library names to their corresponding names in nixpkgs."

[workspace]
members = [
    ".",
    "crates/*",
    "lib/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
clap_complete = "4.4.6"
csv = "1.3.0"
log = "0.4"
regex = "1.10.4"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.109"
thiserror = "1.0.58"
control-file = { path = "./lib/control-file/", version = "0.1.0" }
lazy_static = "1.4.0"
chrono = "0.4.38"
env_logger = "0.11.3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
[profile.dev]
incremental = true
lto = "thin"
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = false
strip = true
