[package]
name = "control2json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
control-file = { path = "../../lib/control-file/", version = "0.1.0" }
serde = "1.0.152"
serde_json = "1.0.93"
thiserror = "1.0.38"
